Added unit tests in the handler layer, automatic deployment to DigitalOcean and Prometheus and Grafana monitoring services
