# src/app/api/endpoints/routes/collectionRoutes.go
@@ -18,6 +18,5 @@ func loadCollectionRoutes(group *echo.Group) {
 	collectionGroup.PUT("/:collectionId", collectionHandler.Update)
 	collectionGroup.DELETE("/:collectionId", collectionHandler.Delete)
 	collectionGroup.GET("", collectionHandler.FindAll)
-	collectionGroup.GET("/:collectionId", collectionHandler.FindById)
-	collectionGroup.GET("/:collectionId/tasks", taskHandler.FindByCollectionId)
+	collectionGroup.GET("/:collectionId/task", taskHandler.FindByCollectionId)
 }
